; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_odb_pack.c_pack_backend__writepack_commit.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_odb_pack.c_pack_backend__writepack_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.git_odb_writepack = type { i32 }
%struct.pack_writepack = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.git_odb_writepack*, i32*)* @pack_backend__writepack_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pack_backend__writepack_commit(%struct.git_odb_writepack* %0, i32* %1) #0 {
  %3 = alloca %struct.git_odb_writepack*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.pack_writepack*, align 8
  store %struct.git_odb_writepack* %0, %struct.git_odb_writepack** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.git_odb_writepack*, %struct.git_odb_writepack** %3, align 8
  %7 = bitcast %struct.git_odb_writepack* %6 to %struct.pack_writepack*
  store %struct.pack_writepack* %7, %struct.pack_writepack** %5, align 8
  %8 = load %struct.pack_writepack*, %struct.pack_writepack** %5, align 8
  %9 = call i32 @assert(%struct.pack_writepack* %8)
  %10 = load %struct.pack_writepack*, %struct.pack_writepack** %5, align 8
  %11 = getelementptr inbounds %struct.pack_writepack, %struct.pack_writepack* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @git_indexer_commit(i32 %12, i32* %13)
  ret i32 %14
}

declare dso_local i32 @assert(%struct.pack_writepack*) #1

declare dso_local i32 @git_indexer_commit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
